k8s-ns-dpl/02-k8s-helloworld-ns.yaml
kind: "Namespace"
apiVersion: "v1"
metadata:
  name: "gke-ethzero-hello"
  labels:
    name: "gke-ethzero-hello"
