k8s-ns-dpl/k8s-helloworld-dpl.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-helloworld
  namespace: gke-ethzero-hello
spec:
  replicas: 6
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: k8s-helloworld
  template:
    metadata:
      labels:
        app: k8s-helloworld
    spec:
      containers:
      - name: k8s-helloworld
        image: lgirardi/k8s-helloworld
        resources:
          limits:
            cpu: 300m
            memory: 250Mi
          requests:
            cpu: 30m
            memory: 125Mi
        ports:
        - name: http
          containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 45
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          timeoutSeconds: 10
