k8s-ns-dpl/k8s-helloworld-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-helloworld-svc
  namespace: gke-ethzero-hello
  labels:
    app: k8s-helloworld
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: k8s-helloworld
